force-app/main/default/objects/BSP_Trends__c/BSP_Trends__c.object-meta.xml
<CustomObject>
    <label>Daily BSP Trends</label>
    <nameField>
        <displayFormat>BTR-{0000000000}</displayFormat>
        <label>BSP Trends Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily BSP Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>