force-app/main/default/objects/BSP_Trends__c/fields/Calcualated_MSP__c.field-meta.xml
<CustomField>
    <fullName>Calcualated_MSP__c</fullName>
    <label>Calcualated MSP(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>