force-app/main/default/objects/BSP_Trends__c/fields/CO2_Euro_100L__c.field-meta.xml
<CustomField>
    <fullName>CO2_Euro_100L__c</fullName>
    <label>CO2(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>