force-app/main/default/objects/BSP_Trends__c/fields/Depot_Steer__c.field-meta.xml
<CustomField>
    <fullName>Depot_Steer__c</fullName>
    <label>Depot Steer(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>