force-app/main/default/objects/BSP_Trends__c/fields/Energy_Fees__c.field-meta.xml
<CustomField>
    <fullName>Energy_Fees__c</fullName>
    <label>Energy Fees(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>