force-app/main/default/objects/BSP_Trends__c/fields/Final_AMV_Euro_100L__c.field-meta.xml
<CustomField>
    <fullName>Final_AMV_Euro_100L__c</fullName>
    <label>Final AMV(Euro/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>