force-app/main/default/objects/BSP_Trends__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Daily BSP Trends</relationshipLabel>
    <relationshipName>Daily_BSP_Trends</relationshipName>
    <type>Lookup</type>
</CustomField>