force-app/main/default/objects/BSP_Trends__c/fields/Marketing_cost__c.field-meta.xml
<CustomField>
    <fullName>Marketing_cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Marketing cost [Euro/100L]</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>