force-app/main/default/objects/BSP_Trends__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product_Catalogue__c</referenceTo>
    <relationshipLabel>Daily BSP Trends</relationshipLabel>
    <relationshipName>Daily_BSP_Trends</relationshipName>
    <type>Lookup</type>
</CustomField>