force-app/main/default/objects/BSP_Trends__c/fields/Material_Grade_L2__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade_L2__c</fullName>
    <formula>TEXT(Material__r.Commodity_Grade_L2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Grade L2</label>
    <type>Text</type>
</CustomField>