force-app/main/default/objects/BSP_Trends__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <formula>RIGHT(LEFT(Mrc_No__c ,9),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Code</label>
    <type>Text</type>
</CustomField>