force-app/main/default/objects/BSP_Trends__c/fields/Tranche__c.field-meta.xml
<CustomField>
    <fullName>Tranche__c</fullName>
    <inlineHelpText>Specify the lifting window.</inlineHelpText>
    <label>Tranche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATP1</fullName>
                <label>Tranche1</label>
            </value>
            <value>
                <fullName>ATP2</fullName>
                <label>Tranche2</label>
            </value>
            <value>
                <fullName>ATP3</fullName>
                <label>Tranche3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>